src/rwscriptParser.java
// $ANTLR 3.5 rwscript.g 2013-12-16 14:01:34

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class rwscriptParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ESC_SEQ", "NUM", "STRING", 
		"VAR", "WS", "'#'", "'$'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'.pop()'", "'.printStack()'", "'.push'", "'.stackSize()'", "'.stackSort()'", 
		"'/'", "';'", "'<='", "'='", "'=='", "'CreateFile()'", "'GREATEST('", 
		"'LEAST('", "'LEN('", "'Stack'", "'ViewFile()'", "'WriteToFile('", "'do'", 
		"'drawCircle'", "'drawSquare'", "'else'", "'if'", "'input :='", "'print.ToConsole'", 
		"'return'", "'while'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int COMMENT=4;
	public static final int ESC_SEQ=5;
	public static final int NUM=6;
	public static final int STRING=7;
	public static final int VAR=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public rwscriptParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public rwscriptParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return rwscriptParser.tokenNames; }
	@Override public String getGrammarFileName() { return "rwscript.g"; }



	public void reportError(RecognitionException e) {
	    displayRecognitionError(this.getTokenNames(), e);
	    System.exit(1);
	}



	// $ANTLR start "prog"
	// rwscript.g:11:1: prog returns [AST ast] : (s= stmt )+ ;
	public final AST prog() throws RecognitionException {
		AST ast = null;


		Stmt s =null;

		try {
			// rwscript.g:12:2: ( (s= stmt )+ )
			// rwscript.g:12:4: (s= stmt )+
			{
			ast = new StmtList();
			// rwscript.g:12:29: (s= stmt )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==VAR||(LA1_0 >= 10 && LA1_0 <= 11)||LA1_0==29||(LA1_0 >= 33 && LA1_0 <= 38)||(LA1_0 >= 40 && LA1_0 <= 45)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// rwscript.g:12:30: s= stmt
					{
					pushFollow(FOLLOW_stmt_in_prog25);
					s=stmt();
					state._fsp--;

					ast.addAST(s);
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "prog"



	// $ANTLR start "stmt"
	// rwscript.g:14:1: stmt returns [Stmt ast] : ( 'Stack' VAR ';' | '$' VAR '=' e= exp ';' | '$' VAR ';' | VAR '=' e= exp ';' | '#' VAR '(' ')' s1= stmt | '#' VAR '(' fpl= parameterList ')' s1= stmt | VAR '(' ')' ';' | VAR '(' apl= actualParameterList ')' ';' | 'return' exp ';' | 'return' ';' | 'print.ToConsole' '(' e= exp ')' ';' | 'input :=' VAR ';' | 'while' '(' exp ')' s= stmt | 'do' st= stmt 'while' '(' exp ')' | 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )? | VAR '.stackSort()' ';' | VAR '.pop()' ';' | VAR '.push' '(' exp ')' ';' | VAR '.printStack()' ';' | 'drawSquare' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';' | 'drawCircle' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';' | 'CreateFile()' ';' | 'WriteToFile(' exp ')' ';' | 'ViewFile()' ';' | '{' (s1= stmt )+ '}' );
	public final Stmt stmt() throws RecognitionException {
		Stmt ast = null;


		Token VAR1=null;
		Token VAR2=null;
		Token VAR3=null;
		Token VAR4=null;
		Token VAR5=null;
		Token VAR6=null;
		Token VAR7=null;
		Token VAR8=null;
		Token VAR10=null;
		Token VAR14=null;
		Token VAR15=null;
		Token VAR16=null;
		Token VAR18=null;
		Expr e =null;
		Stmt s1 =null;
		ArgList fpl =null;
		ArgList apl =null;
		Stmt s =null;
		Stmt st =null;
		Stmt s2 =null;
		Expr e1 =null;
		Expr e2 =null;
		Expr e3 =null;
		Expr e4 =null;
		Expr exp9 =null;
		Expr exp11 =null;
		Expr exp12 =null;
		Expr exp13 =null;
		Expr exp17 =null;
		Expr exp19 =null;

		try {
			// rwscript.g:15:2: ( 'Stack' VAR ';' | '$' VAR '=' e= exp ';' | '$' VAR ';' | VAR '=' e= exp ';' | '#' VAR '(' ')' s1= stmt | '#' VAR '(' fpl= parameterList ')' s1= stmt | VAR '(' ')' ';' | VAR '(' apl= actualParameterList ')' ';' | 'return' exp ';' | 'return' ';' | 'print.ToConsole' '(' e= exp ')' ';' | 'input :=' VAR ';' | 'while' '(' exp ')' s= stmt | 'do' st= stmt 'while' '(' exp ')' | 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )? | VAR '.stackSort()' ';' | VAR '.pop()' ';' | VAR '.push' '(' exp ')' ';' | VAR '.printStack()' ';' | 'drawSquare' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';' | 'drawCircle' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';' | 'CreateFile()' ';' | 'WriteToFile(' exp ')' ';' | 'ViewFile()' ';' | '{' (s1= stmt )+ '}' )
			int alt4=25;
			switch ( input.LA(1) ) {
			case 33:
				{
				alt4=1;
				}
				break;
			case 11:
				{
				int LA4_2 = input.LA(2);
				if ( (LA4_2==VAR) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==27) ) {
						alt4=2;
					}
					else if ( (LA4_17==25) ) {
						alt4=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VAR:
				{
				switch ( input.LA(2) ) {
				case 27:
					{
					alt4=4;
					}
					break;
				case 13:
					{
					int LA4_19 = input.LA(3);
					if ( (LA4_19==14) ) {
						alt4=7;
					}
					else if ( (LA4_19==NUM||LA4_19==VAR||LA4_19==18||(LA4_19 >= 30 && LA4_19 <= 32)) ) {
						alt4=8;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 19, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case 23:
					{
					alt4=16;
					}
					break;
				case 19:
					{
					alt4=17;
					}
					break;
				case 21:
					{
					alt4=18;
					}
					break;
				case 20:
					{
					alt4=19;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case 10:
				{
				int LA4_4 = input.LA(2);
				if ( (LA4_4==VAR) ) {
					int LA4_24 = input.LA(3);
					if ( (LA4_24==13) ) {
						int LA4_31 = input.LA(4);
						if ( (LA4_31==14) ) {
							alt4=5;
						}
						else if ( (LA4_31==VAR) ) {
							alt4=6;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 31, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 24, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 43:
				{
				int LA4_5 = input.LA(2);
				if ( (LA4_5==25) ) {
					alt4=10;
				}
				else if ( (LA4_5==NUM||LA4_5==VAR||LA4_5==18||(LA4_5 >= 30 && LA4_5 <= 32)) ) {
					alt4=9;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 42:
				{
				alt4=11;
				}
				break;
			case 41:
				{
				alt4=12;
				}
				break;
			case 44:
				{
				alt4=13;
				}
				break;
			case 36:
				{
				alt4=14;
				}
				break;
			case 40:
				{
				alt4=15;
				}
				break;
			case 38:
				{
				alt4=20;
				}
				break;
			case 37:
				{
				alt4=21;
				}
				break;
			case 29:
				{
				alt4=22;
				}
				break;
			case 35:
				{
				alt4=23;
				}
				break;
			case 34:
				{
				alt4=24;
				}
				break;
			case 45:
				{
				alt4=25;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// rwscript.g:15:5: 'Stack' VAR ';'
					{
					match(input,33,FOLLOW_33_in_stmt44); 
					VAR1=(Token)match(input,VAR,FOLLOW_VAR_in_stmt46); 
					match(input,25,FOLLOW_25_in_stmt48); 
					ast = new StackDeclStmt((VAR1!=null?VAR1.getText():null));
					}
					break;
				case 2 :
					// rwscript.g:16:4: '$' VAR '=' e= exp ';'
					{
					match(input,11,FOLLOW_11_in_stmt55); 
					VAR2=(Token)match(input,VAR,FOLLOW_VAR_in_stmt57); 
					match(input,27,FOLLOW_27_in_stmt59); 
					pushFollow(FOLLOW_exp_in_stmt63);
					e=exp();
					state._fsp--;

					match(input,25,FOLLOW_25_in_stmt65); 
					ast = new VarDeclStmt((VAR2!=null?VAR2.getText():null), e);
					}
					break;
				case 3 :
					// rwscript.g:18:4: '$' VAR ';'
					{
					match(input,11,FOLLOW_11_in_stmt75); 
					VAR3=(Token)match(input,VAR,FOLLOW_VAR_in_stmt77); 
					match(input,25,FOLLOW_25_in_stmt79); 
					ast = new VarDeclStmt( (VAR3!=null?VAR3.getText():null),new NumExpr(0));
					}
					break;
				case 4 :
					// rwscript.g:20:4: VAR '=' e= exp ';'
					{
					VAR4=(Token)match(input,VAR,FOLLOW_VAR_in_stmt89); 
					match(input,27,FOLLOW_27_in_stmt91); 
					pushFollow(FOLLOW_exp_in_stmt95);
					e=exp();
					state._fsp--;

					match(input,25,FOLLOW_25_in_stmt97); 
					ast = new AssignStmt((VAR4!=null?VAR4.getText():null),e);
					}
					break;
				case 5 :
					// rwscript.g:22:4: '#' VAR '(' ')' s1= stmt
					{
					match(input,10,FOLLOW_10_in_stmt107); 
					VAR5=(Token)match(input,VAR,FOLLOW_VAR_in_stmt110); 
					match(input,13,FOLLOW_13_in_stmt112); 
					match(input,14,FOLLOW_14_in_stmt114); 
					pushFollow(FOLLOW_stmt_in_stmt118);
					s1=stmt();
					state._fsp--;

					ast = new FuncDeclStmt((VAR5!=null?VAR5.getText():null),new Function(new ArgList(),s1));
					}
					break;
				case 6 :
					// rwscript.g:24:4: '#' VAR '(' fpl= parameterList ')' s1= stmt
					{
					match(input,10,FOLLOW_10_in_stmt128); 
					VAR6=(Token)match(input,VAR,FOLLOW_VAR_in_stmt131); 
					match(input,13,FOLLOW_13_in_stmt133); 
					pushFollow(FOLLOW_parameterList_in_stmt137);
					fpl=parameterList();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt139); 
					pushFollow(FOLLOW_stmt_in_stmt143);
					s1=stmt();
					state._fsp--;

					ast = new FuncDeclStmt((VAR6!=null?VAR6.getText():null),new Function(fpl,s1));
					}
					break;
				case 7 :
					// rwscript.g:26:4: VAR '(' ')' ';'
					{
					VAR7=(Token)match(input,VAR,FOLLOW_VAR_in_stmt152); 
					match(input,13,FOLLOW_13_in_stmt154); 
					match(input,14,FOLLOW_14_in_stmt156); 
					match(input,25,FOLLOW_25_in_stmt158); 
					ast = new CallStmt((VAR7!=null?VAR7.getText():null));
					}
					break;
				case 8 :
					// rwscript.g:27:4: VAR '(' apl= actualParameterList ')' ';'
					{
					VAR8=(Token)match(input,VAR,FOLLOW_VAR_in_stmt165); 
					match(input,13,FOLLOW_13_in_stmt167); 
					pushFollow(FOLLOW_actualParameterList_in_stmt171);
					apl=actualParameterList();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt173); 
					match(input,25,FOLLOW_25_in_stmt175); 
					ast = new CallStmt((VAR8!=null?VAR8.getText():null),apl);
					}
					break;
				case 9 :
					// rwscript.g:28:4: 'return' exp ';'
					{
					match(input,43,FOLLOW_43_in_stmt182); 
					pushFollow(FOLLOW_exp_in_stmt184);
					exp9=exp();
					state._fsp--;

					match(input,25,FOLLOW_25_in_stmt186); 
					ast = new ReturnStmt(exp9);
					}
					break;
				case 10 :
					// rwscript.g:29:4: 'return' ';'
					{
					match(input,43,FOLLOW_43_in_stmt193); 
					match(input,25,FOLLOW_25_in_stmt195); 
					ast = new ReturnStmt();
					}
					break;
				case 11 :
					// rwscript.g:30:4: 'print.ToConsole' '(' e= exp ')' ';'
					{
					match(input,42,FOLLOW_42_in_stmt202); 
					match(input,13,FOLLOW_13_in_stmt204); 
					pushFollow(FOLLOW_exp_in_stmt208);
					e=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt210); 
					match(input,25,FOLLOW_25_in_stmt212); 
					ast = new PrintStmt(e);
					}
					break;
				case 12 :
					// rwscript.g:32:4: 'input :=' VAR ';'
					{
					match(input,41,FOLLOW_41_in_stmt227); 
					VAR10=(Token)match(input,VAR,FOLLOW_VAR_in_stmt229); 
					match(input,25,FOLLOW_25_in_stmt231); 
					ast = new InputStmt((VAR10!=null?VAR10.getText():null));
					}
					break;
				case 13 :
					// rwscript.g:34:4: 'while' '(' exp ')' s= stmt
					{
					match(input,44,FOLLOW_44_in_stmt246); 
					match(input,13,FOLLOW_13_in_stmt248); 
					pushFollow(FOLLOW_exp_in_stmt249);
					exp11=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt250); 
					pushFollow(FOLLOW_stmt_in_stmt254);
					s=stmt();
					state._fsp--;

					ast = new WhileStmt(exp11,s);
					}
					break;
				case 14 :
					// rwscript.g:36:4: 'do' st= stmt 'while' '(' exp ')'
					{
					match(input,36,FOLLOW_36_in_stmt269); 
					pushFollow(FOLLOW_stmt_in_stmt273);
					st=stmt();
					state._fsp--;

					match(input,44,FOLLOW_44_in_stmt275); 
					match(input,13,FOLLOW_13_in_stmt277); 
					pushFollow(FOLLOW_exp_in_stmt278);
					exp12=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt279); 
					ast = new DoWhileStmt(exp12,st);
					}
					break;
				case 15 :
					// rwscript.g:38:4: 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )?
					{
					match(input,40,FOLLOW_40_in_stmt294); 
					match(input,13,FOLLOW_13_in_stmt296); 
					pushFollow(FOLLOW_exp_in_stmt297);
					exp13=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt298); 
					pushFollow(FOLLOW_stmt_in_stmt302);
					s1=stmt();
					state._fsp--;

					ast = new IfStmt(exp13,s1);
					// rwscript.g:40:3: ( 'else' s2= stmt )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==39) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// rwscript.g:40:4: 'else' s2= stmt
							{
							match(input,39,FOLLOW_39_in_stmt317); 
							pushFollow(FOLLOW_stmt_in_stmt321);
							s2=stmt();
							state._fsp--;

							ast.addAST(s2);
							}
							break;

					}

					}
					break;
				case 16 :
					// rwscript.g:41:4: VAR '.stackSort()' ';'
					{
					VAR14=(Token)match(input,VAR,FOLLOW_VAR_in_stmt331); 
					match(input,23,FOLLOW_23_in_stmt333); 
					match(input,25,FOLLOW_25_in_stmt335); 
					ast = new StackStmt(StackStmt.SORT,(VAR14!=null?VAR14.getText():null));
					}
					break;
				case 17 :
					// rwscript.g:43:4: VAR '.pop()' ';'
					{
					VAR15=(Token)match(input,VAR,FOLLOW_VAR_in_stmt350); 
					match(input,19,FOLLOW_19_in_stmt352); 
					match(input,25,FOLLOW_25_in_stmt354); 
					ast = new StackStmt(StackStmt.POP,(VAR15!=null?VAR15.getText():null));
					}
					break;
				case 18 :
					// rwscript.g:45:4: VAR '.push' '(' exp ')' ';'
					{
					VAR16=(Token)match(input,VAR,FOLLOW_VAR_in_stmt369); 
					match(input,21,FOLLOW_21_in_stmt371); 
					match(input,13,FOLLOW_13_in_stmt372); 
					pushFollow(FOLLOW_exp_in_stmt373);
					exp17=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt374); 
					match(input,25,FOLLOW_25_in_stmt376); 
					ast = new StackStmt(StackStmt.PUSH,(VAR16!=null?VAR16.getText():null),exp17);
					}
					break;
				case 19 :
					// rwscript.g:47:6: VAR '.printStack()' ';'
					{
					VAR18=(Token)match(input,VAR,FOLLOW_VAR_in_stmt393); 
					match(input,20,FOLLOW_20_in_stmt395); 
					match(input,25,FOLLOW_25_in_stmt397); 
					ast = new StackStmt(StackStmt.PRINT,(VAR18!=null?VAR18.getText():null));
					}
					break;
				case 20 :
					// rwscript.g:49:4: 'drawSquare' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';'
					{
					match(input,38,FOLLOW_38_in_stmt412); 
					match(input,13,FOLLOW_13_in_stmt414); 
					pushFollow(FOLLOW_exp_in_stmt418);
					e1=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt420); 
					pushFollow(FOLLOW_exp_in_stmt424);
					e2=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt426); 
					pushFollow(FOLLOW_exp_in_stmt430);
					e3=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt432); 
					pushFollow(FOLLOW_exp_in_stmt436);
					e4=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt437); 
					match(input,25,FOLLOW_25_in_stmt439); 
					ast = new DrawingStmt(DrawingStmt.SQUARE,e1,e2,e3,e4);
					}
					break;
				case 21 :
					// rwscript.g:51:4: 'drawCircle' '(' e1= exp ',' e2= exp ',' e3= exp ',' e4= exp ')' ';'
					{
					match(input,37,FOLLOW_37_in_stmt448); 
					match(input,13,FOLLOW_13_in_stmt450); 
					pushFollow(FOLLOW_exp_in_stmt454);
					e1=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt456); 
					pushFollow(FOLLOW_exp_in_stmt460);
					e2=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt462); 
					pushFollow(FOLLOW_exp_in_stmt466);
					e3=exp();
					state._fsp--;

					match(input,17,FOLLOW_17_in_stmt468); 
					pushFollow(FOLLOW_exp_in_stmt472);
					e4=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt473); 
					match(input,25,FOLLOW_25_in_stmt475); 
					ast = new DrawingStmt(DrawingStmt.CIRCLE,e1,e2,e3,e4);
					}
					break;
				case 22 :
					// rwscript.g:53:4: 'CreateFile()' ';'
					{
					match(input,29,FOLLOW_29_in_stmt484); 
					match(input,25,FOLLOW_25_in_stmt486); 
					ast = new FileManipulationStmt(FileManipulationStmt.CREATE);
					}
					break;
				case 23 :
					// rwscript.g:55:4: 'WriteToFile(' exp ')' ';'
					{
					match(input,35,FOLLOW_35_in_stmt495); 
					pushFollow(FOLLOW_exp_in_stmt497);
					exp19=exp();
					state._fsp--;

					match(input,14,FOLLOW_14_in_stmt499); 
					match(input,25,FOLLOW_25_in_stmt501); 
					ast = new FileManipulationStmt(FileManipulationStmt.WRITE,exp19);
					}
					break;
				case 24 :
					// rwscript.g:57:4: 'ViewFile()' ';'
					{
					match(input,34,FOLLOW_34_in_stmt510); 
					match(input,25,FOLLOW_25_in_stmt512); 
					ast = new FileManipulationStmt(FileManipulationStmt.VIEW);
					}
					break;
				case 25 :
					// rwscript.g:59:4: '{' (s1= stmt )+ '}'
					{
					match(input,45,FOLLOW_45_in_stmt521); 
					ast = new BlockStmt();
					// rwscript.g:59:33: (s1= stmt )+
					int cnt3=0;
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==VAR||(LA3_0 >= 10 && LA3_0 <= 11)||LA3_0==29||(LA3_0 >= 33 && LA3_0 <= 38)||(LA3_0 >= 40 && LA3_0 <= 45)) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// rwscript.g:59:34: s1= stmt
							{
							pushFollow(FOLLOW_stmt_in_stmt527);
							s1=stmt();
							state._fsp--;

							ast.addAST(s1);
							}
							break;

						default :
							if ( cnt3 >= 1 ) break loop3;
							EarlyExitException eee = new EarlyExitException(3, input);
							throw eee;
						}
						cnt3++;
					}

					match(input,47,FOLLOW_47_in_stmt533); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "stmt"



	// $ANTLR start "thestring"
	// rwscript.g:62:1: thestring returns [String text] : removeQuotes ;
	public final String thestring() throws RecognitionException {
		String text = null;


		String removeQuotes20 =null;
